* Fixed bug where the input down dropdown was badly positioned (#248).
* Shortcut to open the replace bar changed to Ctrl+Shift+F9 (#266).

v2.2.2 (2018-11-23)
* Fixed bug introduced in v2.2.1 (#260).

v2.2.1 (2018-11-22)
* Consecutive groups with the same HMTL mode are applied at once without intermediate renders (where possible) to improve performance (#126).
* Cursor position or selection in text boxes is preserved (#15).
* Minor tweaks.

v2.2.0 (2018-03-19)
* The "Apply automatic substitutions on page load" item in the Tools menu is correctly initialized.
* Column widths and order are saved.
* Added checks to prevent saving substitutions with invalid regular expressions (#223, #236).
* Several UI improvements (#226):
  - Options are now saved automatically.
  - Added a confirmation before clearing the substitution list and moved the clear button to the right end.
  - The edit group button is larger and more separated from the remove button.
  - Substitution groups can be edited with double click.
  - The Delete key no longer removes the whole substitution while it's being edited.
* Updated ag-Grid to version 14.2.0.

v2.1.0 (2017-11-28)
* Added 3 modes for substitution groups (#206):
  - auto: used in auto-replace on load and auto-replace every n seconds
  - manual: used when manually applying the substitution list
  - auto&manual (default): used in both cases, equivalent to previous versions
* New list format 2.1 to include the mode.
* Dropped support for substitution lists in the 0.13 format.
* Context menu is now optional (#229).
* Fixed header names in substitutions tab in options.
* Fixed apply substitution list from the Tools menu (#230).
* Correct shortcuts shown in the toolbar button menu on all platforms (#230).

v2.0.0 (2017-10-13)
* Finished conversion to WebExtension.
* Replace bar has been transformed into a sidebar until WebExtensions support toolbars.
* Enabled translation.
* Fixed bug about the subscription warning not showing sometimes.